--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
     "require": {
         "php": ">=5.6",
         "matthiasmullie/minify": "^1.3",
-        "reisraff/phulp" : "0.0.1"
+        "reisraff/phulp" : "~0.0.1"
     }
 }
