--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     ],
     "autoload" : {
         "psr-4" : {
-            "Minifier\\" : "src"
+            "Phulp\\Minifier\\" : "src"
         }
     },
     "require": {
         "php": ">=5.6",
         "matthiasmullie/minify": "^1.3",
-        "reisraff/phulp" : "~1.0"
+        "reisraff/phulp" : "~1.7"
     }
 }
